# curiosity-saved-the-ntak

./: .gitignore  Readme.md
AOC_2020/: riddler7_2_21.ipynb  sl1.py  sl1_2.py
Maths/: Fractals_&_the_heart_of_roughness.ipynb
ProjectEuler/C++Solutions/: c++1.cpp
ProjectEuler/Rust/primes_gen/: Cargo.toml
ProjectEuler/Rust/primes_gen/src/: lib.rs
ProjectEuler/pythonSolutions/: p7.py
ipynb/AoC/: AoC_2021.ipynb  config.py
pythonSolutions/: p1.py
