[package]
name = "primes_gen"
version = "0.1.0"
authors = ["Dimitrios Ntakoulas"]
edition = "2018"

[lib]
name = "rust_primes_generator_lib"
crate_type = ["dylib"]

[dependencies]
cpython = { version = "0.5.2", features = ["extension-module"] }
pyo3 = { version = "0.12.1", features = ["python3"] }

